First commited as before_50070_rev1