@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2013 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -213,7 +213,7 @@ public abstract class Dialog extends Window {
 	/**
 	 * Collection of buttons created by the <code>createButton</code> method.
 	 */
-	private HashMap<Integer, Button> buttons = new HashMap<>();
+	private HashMap<Integer, Button> buttons = new HashMap<Integer, Button>();
 
 	/**
 	 * Font metrics to use for determining pixel sizes.
@@ -588,10 +588,6 @@ public abstract class Dialog extends Window {
 	 * assumed to be a <code>GridLayout</code> and the number of columns in
 	 * this layout is incremented. Subclasses may override.
 	 * </p>
-	 * <p>
-	 * Note: The common button order is: <b>{other buttons}</b>, <b>OK</b>, <b>Cancel</b>.
-	 * On some platforms, {@link #initializeBounds()} will move the default button to the right.
-	 * </p>
 	 *
 	 * @param parent
 	 *            the parent composite
@@ -609,13 +605,14 @@ public abstract class Dialog extends Window {
 	 * @see #getCancelButton
 	 * @see #getOKButton()
 	 */
-	protected Button createButton(Composite parent, int id, String label, boolean defaultButton) {
+	protected Button createButton(Composite parent, int id, String label,
+			boolean defaultButton) {
 		// increment the number of columns in the button bar
 		((GridLayout) parent.getLayout()).numColumns++;
 		Button button = new Button(parent, SWT.PUSH);
 		button.setText(label);
 		button.setFont(JFaceResources.getDialogFont());
-		button.setData(Integer.valueOf(id));
+		button.setData(new Integer(id));
 		button.addSelectionListener(new SelectionAdapter() {
 			@Override
 			public void widgetSelected(SelectionEvent event) {
@@ -628,7 +625,7 @@ public abstract class Dialog extends Window {
 				shell.setDefaultButton(button);
 			}
 		}
-		buttons.put(Integer.valueOf(id), button);
+		buttons.put(new Integer(id), button);
 		setButtonLayoutData(button);
 		return button;
 	}
@@ -708,10 +705,6 @@ public abstract class Dialog extends Window {
 	 */
 	@Override
 	protected void initializeBounds() {
-		// UI guidelines:
-		// https://developer.gnome.org/hig/stable/dialogs.html.en#primary-buttons
-		// https://developer.apple.com/library/mac/documentation/UserExperience/Conceptual/OSXHIGuidelines/WindowDialogs.html#//apple_ref/doc/uid/20000957-CH43-SW5
-		// https://msdn.microsoft.com/en-us/library/windows/desktop/dn742499(v=vs.85).aspx#win_dialog_box_image25
 		Shell shell = getShell();
 		if (shell != null) {
 			if (shell.getDisplay().getDismissalAlignment() == SWT.RIGHT) {
@@ -836,7 +829,7 @@ public abstract class Dialog extends Window {
 	 * @since 2.0
 	 */
 	protected Button getButton(int id) {
-		return buttons.get(Integer.valueOf(id));
+		return buttons.get(new Integer(id));
 	}
 
 	/**
@@ -996,7 +989,7 @@ public abstract class Dialog extends Window {
 
 		boolean returnValue = super.close();
 		if (returnValue) {
-			buttons = new HashMap<>();
+			buttons = new HashMap<Integer, Button>();
 			buttonBar = null;
 			dialogArea = null;
 		}
