@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2016 IBM Corporation and others.
+ * Copyright (c) 2000, 2010 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -17,6 +17,7 @@ import java.util.Enumeration;
 import java.util.Hashtable;
 
 import org.eclipse.core.runtime.ListenerList;
+
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.SWTException;
 import org.eclipse.swt.accessibility.ACC;
@@ -29,14 +30,18 @@ import org.eclipse.swt.custom.ScrolledComposite;
 import org.eclipse.swt.dnd.Clipboard;
 import org.eclipse.swt.dnd.TextTransfer;
 import org.eclipse.swt.dnd.Transfer;
+import org.eclipse.swt.events.DisposeEvent;
+import org.eclipse.swt.events.DisposeListener;
 import org.eclipse.swt.events.FocusEvent;
 import org.eclipse.swt.events.FocusListener;
 import org.eclipse.swt.events.MenuEvent;
 import org.eclipse.swt.events.MenuListener;
 import org.eclipse.swt.events.MouseEvent;
 import org.eclipse.swt.events.MouseListener;
+import org.eclipse.swt.events.MouseMoveListener;
 import org.eclipse.swt.events.MouseTrackListener;
 import org.eclipse.swt.events.PaintEvent;
+import org.eclipse.swt.events.PaintListener;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.events.SelectionListener;
@@ -56,6 +61,7 @@ import org.eclipse.swt.widgets.Listener;
 import org.eclipse.swt.widgets.Menu;
 import org.eclipse.swt.widgets.MenuItem;
 import org.eclipse.swt.widgets.TypedListener;
+
 import org.eclipse.ui.forms.HyperlinkSettings;
 import org.eclipse.ui.forms.events.HyperlinkEvent;
 import org.eclipse.ui.forms.events.IHyperlinkListener;
@@ -196,9 +202,9 @@ public class FormText extends Canvas {
 
 	private FormTextModel model;
 
-	private ListenerList<IHyperlinkListener> listeners;
+	private ListenerList listeners;
 
-	private Hashtable<String, Object> resourceTable = new Hashtable<>();
+	private Hashtable resourceTable = new Hashtable();
 
 	private IHyperlinkSegment entered;
 
@@ -220,17 +226,17 @@ public class FormText extends Canvas {
 		public FormTextLayout() {
 		}
 
-		@Override
 		public int computeMaximumWidth(Composite parent, boolean changed) {
 			return computeSize(parent, SWT.DEFAULT, SWT.DEFAULT, changed).x;
 		}
 
-		@Override
 		public int computeMinimumWidth(Composite parent, boolean changed) {
 			return computeSize(parent, 5, SWT.DEFAULT, true).x;
 		}
 
-		@Override
+		/*
+		 * @see Layout#computeSize(Composite, int, int, boolean)
+		 */
 		public Point computeSize(Composite composite, int wHint, int hHint,
 				boolean changed) {
 			long start = 0;
@@ -276,7 +282,8 @@ public class FormText extends Canvas {
 				if (segments.length > 0) {
 					selectableInTheLastRow = false;
 					int pwidth = 0;
-					for (ParagraphSegment segment : segments) {
+					for (int j = 0; j < segments.length; j++) {
+						ParagraphSegment segment = segments[j];
 						segment.advanceLocator(gc, wHint, loc, resourceTable, false);
 						if (wHint != SWT.DEFAULT) {
 							width = Math.max(width, loc.width);
@@ -300,7 +307,6 @@ public class FormText extends Canvas {
 			return new Point(width, loc.y);
 		}
 
-		@Override
 		protected void layout(Composite composite, boolean flushCache) {
 			long start = 0;
 
@@ -361,41 +367,50 @@ public class FormText extends Canvas {
 		super(parent, SWT.NO_BACKGROUND | SWT.WRAP | style);
 		setLayout(new FormTextLayout());
 		model = new FormTextModel();
-		addDisposeListener(e -> {
-			model.dispose();
-			disposeResourceTable(true);
-		});
-		addPaintListener(e -> paint(e));
-		addListener(SWT.KeyDown, e -> {
-			if (e.character == '\r') {
-				activateSelectedLink();
-				return;
+		addDisposeListener(new DisposeListener() {
+			public void widgetDisposed(DisposeEvent e) {
+				model.dispose();
+				disposeResourceTable(true);
 			}
 		});
-		addListener(SWT.Traverse, e -> {
-			if (DEBUG_FOCUS)
-				System.out.println("Traversal: " + e); //$NON-NLS-1$
-			switch (e.detail) {
-			case SWT.TRAVERSE_PAGE_NEXT:
-			case SWT.TRAVERSE_PAGE_PREVIOUS:
-			case SWT.TRAVERSE_ARROW_NEXT:
-			case SWT.TRAVERSE_ARROW_PREVIOUS:
-				e.doit = false;
-				return;
+		addPaintListener(new PaintListener() {
+			public void paintControl(PaintEvent e) {
+				paint(e);
 			}
-			if (!model.hasFocusSegments()) {
-				e.doit = true;
-				return;
+		});
+		addListener(SWT.KeyDown, new Listener() {
+			public void handleEvent(Event e) {
+				if (e.character == '\r') {
+					activateSelectedLink();
+					return;
+				}
 			}
-			if (e.detail == SWT.TRAVERSE_TAB_NEXT)
-				e.doit = advance(true);
-			else if (e.detail == SWT.TRAVERSE_TAB_PREVIOUS)
-				e.doit = advance(false);
-			else if (e.detail != SWT.TRAVERSE_RETURN)
-				e.doit = true;
+		});
+		addListener(SWT.Traverse, new Listener() {
+			public void handleEvent(Event e) {
+				if (DEBUG_FOCUS)
+					System.out.println("Traversal: " + e); //$NON-NLS-1$
+				switch (e.detail) {
+				case SWT.TRAVERSE_PAGE_NEXT:
+				case SWT.TRAVERSE_PAGE_PREVIOUS:
+				case SWT.TRAVERSE_ARROW_NEXT:
+				case SWT.TRAVERSE_ARROW_PREVIOUS:
+					e.doit = false;
+					return;
+				}
+				if (!model.hasFocusSegments()) {
+					e.doit = true;
+					return;
+				}
+				if (e.detail == SWT.TRAVERSE_TAB_NEXT)
+					e.doit = advance(true);
+				else if (e.detail == SWT.TRAVERSE_TAB_PREVIOUS)
+					e.doit = advance(false);
+				else if (e.detail != SWT.TRAVERSE_RETURN)
+					e.doit = true;
+			}
 		});
 		addFocusListener(new FocusListener() {
-			@Override
 			public void focusGained(FocusEvent e) {
 				if (!hasFocus) {
 					hasFocus = true;
@@ -408,7 +423,6 @@ public class FormText extends Canvas {
 				}
 			}
 
-			@Override
 			public void focusLost(FocusEvent e) {
 				if (DEBUG_FOCUS) {
 					System.out.println("FormText: focus lost"); //$NON-NLS-1$
@@ -421,29 +435,24 @@ public class FormText extends Canvas {
 			}
 		});
 		addMouseListener(new MouseListener() {
-			@Override
 			public void mouseDoubleClick(MouseEvent e) {
 			}
 
-			@Override
 			public void mouseDown(MouseEvent e) {
 				// select a link
 				handleMouseClick(e, true);
 			}
 
-			@Override
 			public void mouseUp(MouseEvent e) {
 				// activate a link
 				handleMouseClick(e, false);
 			}
 		});
 		addMouseTrackListener(new MouseTrackListener() {
-			@Override
 			public void mouseEnter(MouseEvent e) {
 				handleMouseMove(e);
 			}
 
-			@Override
 			public void mouseExit(MouseEvent e) {
 				if (entered != null) {
 					exitLink(entered, e.stateMask);
@@ -453,12 +462,15 @@ public class FormText extends Canvas {
 				}
 			}
 
-			@Override
 			public void mouseHover(MouseEvent e) {
 				handleMouseHover(e);
 			}
 		});
-		addMouseMoveListener(e -> handleMouseMove(e));
+		addMouseMoveListener(new MouseMoveListener() {
+			public void mouseMove(MouseEvent e) {
+				handleMouseMove(e);
+			}
+		});
 		initAccessible();
 		ensureBoldFontPresent(getFont());
 		createMenu();
@@ -483,7 +495,6 @@ public class FormText extends Canvas {
 	 *         <samp>false </samp> otherwise.
 	 * @deprecated not used any more - returns <code>false</code>
 	 */
-	@Deprecated
 	public boolean isLoading() {
 		return false;
 	}
@@ -495,7 +506,6 @@ public class FormText extends Canvas {
 	 * @return loading text message
 	 * @deprecated loading text is not used since 3.1
 	 */
-	@Deprecated
 	public String getLoadingText() {
 		return null;
 	}
@@ -510,7 +520,6 @@ public class FormText extends Canvas {
 	 *            loading text message
 	 * @deprecated use setText(loadingText, false, false);
 	 */
-	@Deprecated
 	public void setLoadingText(String loadingText) {
 		setText(loadingText, false, false);
 	}
@@ -632,7 +641,6 @@ public class FormText extends Canvas {
 	 * @param font
 	 *            the default font to use
 	 */
-	@Override
 	public void setFont(Font font) {
 		super.setFont(font);
 		model.clearCache(null);
@@ -694,39 +702,43 @@ public class FormText extends Canvas {
 		Paragraph[] paragraphs = model.getParagraphs();
 		if (paragraphs == null)
 			return;
-		Listener listener = e -> {
-			switch (e.type) {
-			case SWT.FocusIn:
-				if (!controlFocusTransfer)
-					syncControlSegmentFocus((Control) e.widget);
-				break;
-			case SWT.Traverse:
-				if (DEBUG_FOCUS)
-					System.out.println("Control traversal: " + e); //$NON-NLS-1$
-				switch (e.detail) {
-				case SWT.TRAVERSE_PAGE_NEXT:
-				case SWT.TRAVERSE_PAGE_PREVIOUS:
-				case SWT.TRAVERSE_ARROW_NEXT:
-				case SWT.TRAVERSE_ARROW_PREVIOUS:
-					e.doit = false;
-					return;
+		Listener listener = new Listener() {
+			public void handleEvent(Event e) {
+				switch (e.type) {
+				case SWT.FocusIn:
+					if (!controlFocusTransfer)
+						syncControlSegmentFocus((Control) e.widget);
+					break;
+				case SWT.Traverse:
+					if (DEBUG_FOCUS)
+						System.out.println("Control traversal: " + e); //$NON-NLS-1$
+					switch (e.detail) {
+					case SWT.TRAVERSE_PAGE_NEXT:
+					case SWT.TRAVERSE_PAGE_PREVIOUS:
+					case SWT.TRAVERSE_ARROW_NEXT:
+					case SWT.TRAVERSE_ARROW_PREVIOUS:
+						e.doit = false;
+						return;
+					}
+					Control c = (Control) e.widget;
+					ControlSegment segment = (ControlSegment) c
+							.getData(CONTROL_KEY);
+					if (e.detail == SWT.TRAVERSE_TAB_NEXT)
+						e.doit = advanceControl(c, segment, true);
+					else if (e.detail == SWT.TRAVERSE_TAB_PREVIOUS)
+						e.doit = advanceControl(c, segment, false);
+					if (!e.doit)
+						e.detail = SWT.TRAVERSE_NONE;
+					break;
 				}
-				Control c = (Control) e.widget;
-				ControlSegment segment = (ControlSegment) c.getData(CONTROL_KEY);
-				if (e.detail == SWT.TRAVERSE_TAB_NEXT)
-					e.doit = advanceControl(c, segment, true);
-				else if (e.detail == SWT.TRAVERSE_TAB_PREVIOUS)
-					e.doit = advanceControl(c, segment, false);
-				if (!e.doit)
-					e.detail = SWT.TRAVERSE_NONE;
-				break;
 			}
 		};
-		for (Paragraph p : paragraphs) {
+		for (int i = 0; i < paragraphs.length; i++) {
+			Paragraph p = paragraphs[i];
 			ParagraphSegment[] segments = p.getSegments();
-			for (ParagraphSegment segment : segments) {
-				if (segment instanceof ControlSegment) {
-					ControlSegment cs = (ControlSegment) segment;
+			for (int j = 0; j < segments.length; j++) {
+				if (segments[j] instanceof ControlSegment) {
+					ControlSegment cs = (ControlSegment) segments[j];
 					Control c = cs.getControl(resourceTable);
 					if (c != null) {
 						if (c.getData(CONTROL_KEY) == null) {
@@ -744,8 +756,8 @@ public class FormText extends Canvas {
 		if (c instanceof Composite) {
 			Composite parent = (Composite) c;
 			Control[] children = parent.getChildren();
-			for (Control element : children) {
-				attachTraverseListener(element, listener);
+			for (int i = 0; i < children.length; i++) {
+				attachTraverseListener(children[i], listener);
 			}
 			if (c instanceof Canvas) {
 				// If Canvas, the control iteself can accept
@@ -885,7 +897,6 @@ public class FormText extends Canvas {
 	 * @param menu
 	 *            the menu to associate with this text control
 	 */
-	@Override
 	public void setMenu(Menu menu) {
 		Menu currentMenu = super.getMenu();
 		if (currentMenu != null && INTERNAL_MENU.equals(currentMenu.getData())) {
@@ -904,7 +915,6 @@ public class FormText extends Canvas {
 		copyItem.setText(Messages.FormText_copy);
 
 		SelectionListener listener = new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				if (e.widget == copyItem) {
 					copy();
@@ -913,12 +923,10 @@ public class FormText extends Canvas {
 		};
 		copyItem.addSelectionListener(listener);
 		menu.addMenuListener(new MenuListener() {
-			@Override
 			public void menuShown(MenuEvent e) {
 				copyItem.setEnabled(canCopy());
 			}
 
-			@Override
 			public void menuHidden(MenuEvent e) {
 			}
 		});
@@ -954,7 +962,7 @@ public class FormText extends Canvas {
 	 */
 	public void addHyperlinkListener(IHyperlinkListener listener) {
 		if (listeners == null)
-			listeners = new ListenerList<>();
+			listeners = new ListenerList();
 		listeners.add(listener);
 	}
 
@@ -1116,7 +1124,6 @@ public class FormText extends Canvas {
 	private void initAccessible() {
 		Accessible accessible = getAccessible();
 		accessible.addAccessibleListener(new AccessibleAdapter() {
-			@Override
 			public void getName(AccessibleEvent e) {
 				if (e.childID == ACC.CHILDID_SELF)
 					e.result = model.getAccessibleText();
@@ -1129,7 +1136,6 @@ public class FormText extends Canvas {
 				}
 			}
 
-			@Override
 			public void getHelp(AccessibleEvent e) {
 				e.result = getToolTipText();
 				int linkCount = model.getHyperlinkCount();
@@ -1140,7 +1146,6 @@ public class FormText extends Canvas {
 			}
 		});
 		accessible.addAccessibleControlListener(new AccessibleControlAdapter() {
-			@Override
 			public void getChildAtPoint(AccessibleControlEvent e) {
 				Point pt = toControl(new Point(e.x, e.y));
 				IHyperlinkSegment link = model.findHyperlinkAt(pt.x, pt.y);
@@ -1150,7 +1155,6 @@ public class FormText extends Canvas {
 					e.childID = ACC.CHILDID_SELF;
 			}
 
-			@Override
 			public void getLocation(AccessibleControlEvent e) {
 				Rectangle location = null;
 				if (e.childID != ACC.CHILDID_SELF
@@ -1171,7 +1175,6 @@ public class FormText extends Canvas {
 				e.height = location.height;
 			}
 
-			@Override
 			public void getFocus(AccessibleControlEvent e) {
 				int childID = ACC.CHILDID_NONE;
 
@@ -1184,19 +1187,16 @@ public class FormText extends Canvas {
 				e.childID = childID;
 			}
 
-			@Override
 			public void getDefaultAction (AccessibleControlEvent e) {
 				if (model.getHyperlinkCount() > 0) {
 				    e.result = SWT.getMessage ("SWT_Press"); //$NON-NLS-1$
 				}
 			}
 
-			@Override
 			public void getChildCount(AccessibleControlEvent e) {
 				e.detail = model.getHyperlinkCount();
 			}
 
-			@Override
 			public void getRole(AccessibleControlEvent e) {
 				int role = 0;
 				int childID = e.childID;
@@ -1213,14 +1213,12 @@ public class FormText extends Canvas {
 				e.detail = role;
 			}
 
-			@Override
 			public void getSelection(AccessibleControlEvent e) {
 				int selectedIndex = model.getSelectedSegmentIndex();
 				e.childID = (selectedIndex == -1) ? ACC.CHILDID_NONE
 						: selectedIndex;
 			}
 
-			@Override
 			public void getState(AccessibleControlEvent e) {
 				int linkCount = model.getHyperlinkCount();
 				int selectedIndex = model.getSelectedSegmentIndex();
@@ -1244,17 +1242,15 @@ public class FormText extends Canvas {
 				e.detail = state;
 			}
 
-			@Override
 			public void getChildren(AccessibleControlEvent e) {
 				int linkCount = model.getHyperlinkCount();
 				Object[] children = new Object[linkCount];
 				for (int i = 0; i < linkCount; i++) {
-					children[i] = Integer.valueOf(i);
+					children[i] = new Integer(i);
 				}
 				e.children = children;
 			}
 
-			@Override
 			public void getValue(AccessibleControlEvent e) {
 				// e.result = model.getAccessibleText();
 			}
@@ -1500,9 +1496,12 @@ public class FormText extends Canvas {
 	private void enterLink(IHyperlinkSegment link, int stateMask) {
 		if (link == null || listeners == null)
 			return;
+		int size = listeners.size();
 		HyperlinkEvent he = new HyperlinkEvent(this, link.getHref(), link
 				.getText(), stateMask);
-		for (IHyperlinkListener listener : listeners) {
+		Object [] listenerList = listeners.getListeners();
+		for (int i = 0; i < size; i++) {
+			IHyperlinkListener listener = (IHyperlinkListener) listenerList[i];
 			listener.linkEntered(he);
 		}
 	}
@@ -1510,9 +1509,12 @@ public class FormText extends Canvas {
 	private void exitLink(IHyperlinkSegment link, int stateMask) {
 		if (link == null || listeners == null)
 			return;
+		int size = listeners.size();
 		HyperlinkEvent he = new HyperlinkEvent(this, link.getHref(), link
 				.getText(), stateMask);
-		for (IHyperlinkListener listener : listeners) {
+		Object [] listenerList = listeners.getListeners();
+		for (int i = 0; i < size; i++) {
+			IHyperlinkListener listener = (IHyperlinkListener) listenerList[i];
 			listener.linkExited(he);
 		}
 	}
@@ -1591,7 +1593,8 @@ public class FormText extends Canvas {
 		IHyperlinkSegment selectedLink = getSelectedLink();
 		if (getDisplay().getFocusControl() != this)
 			selectedLink = null;
-		for (Paragraph p : paragraphs) {
+		for (int i = 0; i < paragraphs.length; i++) {
+			Paragraph p = paragraphs[i];
 			p
 					.paint(textGC, repaintRegion, resourceTable, selectedLink,
 							selData);
@@ -1652,7 +1655,6 @@ public class FormText extends Canvas {
 	 *
 	 * @see org.eclipse.swt.widgets.Composite#computeSize(int, int, boolean)
 	 */
-	@Override
 	public Point computeSize(int wHint, int hHint, boolean changed) {
 		checkWidget();
 		Point size;
@@ -1677,9 +1679,9 @@ public class FormText extends Canvas {
 				resourceTable.remove(FormTextModel.BOLD_FONT_ID);
 			}
 		}
-		ArrayList<String> imagesToRemove = new ArrayList<>();
-		for (Enumeration<String> enm = resourceTable.keys(); enm.hasMoreElements();) {
-			String key = enm.nextElement();
+		ArrayList imagesToRemove = new ArrayList();
+		for (Enumeration enm = resourceTable.keys(); enm.hasMoreElements();) {
+			String key = (String) enm.nextElement();
 			if (key.startsWith(ImageSegment.SEL_IMAGE_PREFIX)) {
 				Object obj = resourceTable.get(key);
 				if (obj instanceof Image) {
@@ -1696,13 +1698,19 @@ public class FormText extends Canvas {
 		}
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.swt.widgets.Control#setEnabled(boolean)
+	 */
 	public void setEnabled(boolean enabled) {
 		super.setEnabled(enabled);
 		redraw();
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.swt.widgets.Control#setFocus()
+	 */
 	public boolean setFocus() {
 		mouseFocus = true;
 		FormUtil.setFocusScrollingEnabled(this, false);
