@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2016 IBM Corporation and others.
+ * Copyright (c) 2000, 2014 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,17 +7,16 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 400714, 441267, 441184, 445723, 445724, 472654, 481608
- *     Patrik Suzzi <psuzzi@gmail.com> - Bug 489250
+ *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 400714, 441267, 441184, 445723, 445724
  *******************************************************************************/
 
 package org.eclipse.ui.internal;
 
 import com.ibm.icu.text.MessageFormat;
+import java.io.OutputStream;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Locale;
 import org.eclipse.core.runtime.CoreException;
@@ -85,6 +84,8 @@ import org.osgi.framework.BundleContext;
 import org.osgi.framework.BundleEvent;
 import org.osgi.framework.BundleException;
 import org.osgi.framework.BundleListener;
+import org.osgi.framework.InvalidSyntaxException;
+import org.osgi.framework.ServiceReference;
 import org.osgi.framework.SynchronousBundleListener;
 import org.osgi.util.tracker.ServiceTracker;
 
@@ -153,7 +154,7 @@ public class WorkbenchPlugin extends AbstractUIPlugin {
     private BundleContext bundleContext;
 
     // The set of currently starting bundles
-	private Collection<Bundle> startingBundles = new HashSet<>();
+	private Collection<Bundle> startingBundles = new HashSet<Bundle>();
 
     /**
      * Global workbench ui plugin flag. Only workbench implementation is allowed to use this flag
@@ -737,7 +738,7 @@ public class WorkbenchPlugin extends AbstractUIPlugin {
      */
     public static void log(Class clazz, String methodName, Throwable t) {
         String msg = MessageFormat.format("Exception in {0}.{1}: {2}", //$NON-NLS-1$
-				clazz.getName(), methodName, t);
+                new Object[] { clazz.getName(), methodName, t });
         log(msg, t);
     }
 
@@ -757,13 +758,12 @@ public class WorkbenchPlugin extends AbstractUIPlugin {
 
         //1FTUHE0: ITPCORE:ALL - API - Status & logging - loss of semantic info
 
-		// Combine message and status into a MultiStatus to avoid losing
-		// context, but avoid creating the MultiStatus unnecessarily if message
-		// is the same
-		if (message != null && !message.equals(status.getMessage())) {
-			status = StatusUtil.newStatus(Collections.singletonList(status), message, null);
+        if (message != null) {
+            getDefault().getLog().log(
+                    StatusUtil.newStatus(IStatus.ERROR, message, null));
         }
-		getDefault().getLog().log(status);
+
+        getDefault().getLog().log(status);
     }
 
     /**
@@ -915,7 +915,7 @@ public class WorkbenchPlugin extends AbstractUIPlugin {
 			// and premature attempt to resolve class reference
 			boolean isBidi = com.ibm.icu.text.Bidi.requiresBidi(message.toCharArray(), 0,
 					message.length());
-			return Boolean.valueOf(isBidi);
+			return new Boolean(isBidi);
 		} catch (NoClassDefFoundError e) {
 			// the ICU Base bundle used in place of ICU?
 			return null;
@@ -1160,6 +1160,29 @@ public class WorkbenchPlugin extends AbstractUIPlugin {
 		return bundleContext.getBundles().length;
 	}
 
+	/* package */ OutputStream getSplashStream() {
+		// assumes the output stream is available as a service
+		// see EclipseStarter.publishSplashScreen
+		ServiceReference[] ref;
+		try {
+			ref = bundleContext.getServiceReferences(OutputStream.class.getName(), null);
+		} catch (InvalidSyntaxException e) {
+			return null;
+		}
+		if(ref==null) {
+			return null;
+		}
+		for (int i = 0; i < ref.length; i++) {
+			String name = (String) ref[i].getProperty("name"); //$NON-NLS-1$
+			if (name != null && name.equals("splashstream")) {  //$NON-NLS-1$
+				Object result = bundleContext.getService(ref[i]);
+				bundleContext.ungetService(ref[i]);
+				return (OutputStream) result;
+			}
+		}
+		return null;
+	}
+
 	/**
 	 * @return the bundle listener for this plug-in
 	 */
@@ -1246,7 +1269,7 @@ public class WorkbenchPlugin extends AbstractUIPlugin {
 			// we're on a 32 bit platform so invoke it with splash
 			// handle as an int
 			splashShell = (Shell) method.invoke(null, new Object[] { display,
-					Integer.valueOf(splashHandle) });
+					new Integer(splashHandle) });
 		} catch (NoSuchMethodException e) {
 			// look for the 64 bit internal_new shell method
 			try {
