@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2016 IBM Corporation and others.
+ * Copyright (c) 2009, 2010 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,15 +7,12 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Patrik Suzzi <psuzzi@gmail.com> - Bug 473973
- *     Friederike Schertel <friederike@schertel.org> - Bug 478336
  ******************************************************************************/
 package org.eclipse.ui.internal.statushandlers;
 
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.Map;
-import org.eclipse.core.runtime.Adapters;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.jobs.Job;
 import org.eclipse.jface.action.IAction;
@@ -189,13 +186,16 @@ public class InternalDialog extends TrayDialog {
 		}
 		if (id == IDialogConstants.DETAILS_ID) {
 			// was the details button pressed?
-			dialogState.put(IStatusDialogConstants.DETAILS_OPENED, Boolean.valueOf(
+			dialogState.put(IStatusDialogConstants.DETAILS_OPENED, new Boolean(
 					toggleDetailsArea()));
 		} else {
 			super.buttonPressed(id);
 		}
 	}
 
+	/*
+	 * (non-Javadoc) Method declared in Window.
+	 */
 	@Override
 	final protected void configureShell(Shell shell) {
 		super.configureShell(shell);
@@ -214,6 +214,11 @@ public class InternalDialog extends TrayDialog {
 		button.setLayoutData(data);
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.jface.dialogs.Dialog#createDialogArea(org.eclipse.swt.widgets.Composite)
+	 */
 	@Override
 	protected Control createDialogArea(Composite parent) {
 		createTitleArea(parent);
@@ -223,6 +228,11 @@ public class InternalDialog extends TrayDialog {
 		return parent;
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.jface.dialogs.Dialog#isResizable()
+	 */
 	@Override
 	protected boolean isResizable() {
 		return true;
@@ -313,6 +323,11 @@ public class InternalDialog extends TrayDialog {
 		this.supportTray = supportTray;
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.jface.window.Window#open()
+	 */
 	@Override
 	public int open() {
 		boolean modalitySwitch = getBooleanValue(IStatusDialogConstants.MODALITY_SWITCH);
@@ -333,6 +348,9 @@ public class InternalDialog extends TrayDialog {
 		return result;
 	}
 
+	/* (non-Javadoc)
+	 * @see org.eclipse.jface.dialogs.TrayDialog#closeTray()
+	 */
 	@Override
 	public void closeTray() throws IllegalStateException {
 		if (getTray() != null) {
@@ -371,9 +389,6 @@ public class InternalDialog extends TrayDialog {
 	}
 
 	void refreshDialogSize() {
-		if (dialogArea == null || dialogArea.isDisposed()) {
-			return;
-		}
 		Point newSize = getShell().computeSize(SWT.DEFAULT, SWT.DEFAULT);
 		getShell().setSize(newSize);
 	}
@@ -467,8 +482,16 @@ public class InternalDialog extends TrayDialog {
 		}
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see
+	 * org.eclipse.jface.dialogs.Dialog#getInitialLocation(org.eclipse.swt.graphics
+	 * .Point)
+	 */
 	@Override
 	public Point getInitialLocation(Point initialSize) {
+		// TODO Auto-generated method stub
 		return super.getInitialLocation(initialSize);
 	}
 
@@ -846,17 +869,37 @@ public class InternalDialog extends TrayDialog {
 	 */
 	private void initContentProvider() {
 		IContentProvider provider = new IStructuredContentProvider() {
+			/*
+			 * (non-Javadoc)
+			 *
+			 * @see org.eclipse.jface.viewers.IContentProvider#dispose()
+			 */
 			@Override
 			public void dispose() {
 				// Nothing of interest here
 			}
 
+			/*
+			 * (non-Javadoc)
+			 *
+			 * @see
+			 * org.eclipse.jface.viewers.IStructuredContentProvider#getElements
+			 * (java.lang.Object)
+			 */
 			@Override
 			public Object[] getElements(Object inputElement) {
 				return ((Collection) dialogState
 						.get(IStatusDialogConstants.STATUS_ADAPTERS)).toArray();
 			}
 
+			/*
+			 * (non-Javadoc)
+			 *
+			 * @see
+			 * org.eclipse.jface.viewers.IContentProvider#inputChanged(org
+			 * .eclipse.jface.viewers.Viewer, java.lang.Object,
+			 * java.lang.Object)
+			 */
 			@Override
 			public void inputChanged(Viewer viewer, Object oldInput,
 					Object newInput) {
@@ -978,7 +1021,7 @@ public class InternalDialog extends TrayDialog {
 	private IAction getGotoAction() {
 		Object property = null;
 
-		Job job = Adapters.adapt(getCurrentStatusAdapter(), Job.class);
+		Job job = (Job) (getCurrentStatusAdapter().getAdapter(Job.class));
 		if (job != null) {
 			property = job.getProperty(IProgressConstants.ACTION_PROPERTY);
 		}
